[gd_scene load_steps=16 format=3 uid="uid://ccbouixbmtxpm"]

[ext_resource type="Texture2D" uid="uid://bgy2tegbtnst5" path="res://assets/ui/Inventory_background.png" id="1_1123p"]
[ext_resource type="Script" path="res://scripts/ui/bag.gd" id="1_iaw2m"]
[ext_resource type="Texture2D" uid="uid://etuyovlv65md" path="res://assets/ui/Inventory_Slot.png" id="2_gd8i5"]
[ext_resource type="Texture2D" uid="uid://bdgsj4u0mps4k" path="res://assets/tilesets/keyboard/close_button.png" id="4_du4pk"]
[ext_resource type="Texture2D" uid="uid://cnmt67s0q0mo1" path="res://assets/Inventory_background.png" id="5_3r2rs"]
[ext_resource type="PackedScene" uid="uid://bbmldlfdwumr4" path="res://scenes/ui/equipment_ui.tscn" id="5_m4lfg"]
[ext_resource type="FontFile" uid="uid://cf7ocurslf3ii" path="res://assets/font/VonwaonBitmap-12px.ttf" id="6_ygi1i"]
[ext_resource type="Texture2D" uid="uid://der2sviccaosn" path="res://assets/player/player_suit_0.png" id="7_ub1b4"]
[ext_resource type="Texture2D" uid="uid://cs4xalc38d5t6" path="res://assets/bag_ui/close_button.png" id="9_v4pow"]
[ext_resource type="Script" path="res://scripts/ui/history/history_container.gd" id="9_x10kj"]
[ext_resource type="Texture2D" uid="uid://47ru5i5x08qa" path="res://assets/button_background_new.png" id="10_q2bgm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qno3w"]
texture = ExtResource("1_1123p")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ij42q"]
texture = ExtResource("5_3r2rs")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_416ga"]
texture = ExtResource("5_3r2rs")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nm8ib"]
texture = ExtResource("10_q2bgm")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="bag" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_iaw2m")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -161.0
offset_right = -393.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxTexture_qno3w")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -3
theme_override_constants/margin_bottom = -5

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="TextureButton" type="TextureButton" parent="PanelContainer/VBoxContainer/MarginContainer2/HFlowContainer"]
layout_mode = 2
texture_normal = ExtResource("4_du4pk")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.376471, 0.247059, 1)
theme_override_font_sizes/font_size = 15
text = "背包"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
columns = 4

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect6" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect7" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect8" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect9" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect10" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect11" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect12" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect13" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect14" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect15" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="TextureRect16" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_gd8i5")

[node name="item_grid" type="GridContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
columns = 4

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -870.0
offset_top = -161.0
offset_right = -739.5
offset_bottom = -56.0
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxTexture_ij42q")

[node name="player_name" type="Label" parent="PanelContainer2"]
custom_minimum_size = Vector2(96, 12)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.376471, 0.247059, 1)
theme_override_fonts/font = ExtResource("6_ygi1i")
theme_override_font_sizes/font_size = 12
vertical_alignment = 1
autowrap_mode = 1
max_lines_visible = 2

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -836.0
offset_top = -91.0
offset_right = -753.0
offset_bottom = -15.0
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxTexture_416ga")

[node name="Control" type="Control" parent="PanelContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="player_skeleton" type="Node2D" parent="PanelContainer3/Control"]
position = Vector2(-44, -45)

[node name="body" type="Sprite2D" parent="PanelContainer3/Control/player_skeleton"]
position = Vector2(45, 50)
texture = ExtResource("7_ub1b4")

[node name="head" type="Sprite2D" parent="PanelContainer3/Control/player_skeleton"]
position = Vector2(45, 50)

[node name="pants" type="Sprite2D" parent="PanelContainer3/Control/player_skeleton"]
position = Vector2(45, 50)

[node name="shoes" type="Sprite2D" parent="PanelContainer3/Control/player_skeleton"]
position = Vector2(45, 50)

[node name="clothes" type="Sprite2D" parent="PanelContainer3/Control/player_skeleton"]
position = Vector2(45, 50)

[node name="equipment_ui" parent="." instance=ExtResource("5_m4lfg")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 22.0
offset_top = 2.0
offset_right = 22.0
offset_bottom = 2.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="history" type="Label" parent="."]
layout_mode = 0
offset_left = -724.0
offset_top = -136.0
offset_right = -580.0
offset_bottom = -100.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.6, 0.376471, 0.247059, 1)
theme_override_fonts/font = ExtResource("6_ygi1i")
theme_override_font_sizes/font_size = 36
text = "历史记录"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = -864.0
offset_top = -202.0
offset_right = -224.0
offset_bottom = 158.0
mouse_filter = 1

[node name="historyContainer" type="MarginContainer" parent="PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_right = 45
script = ExtResource("9_x10kj")

[node name="record_gird" type="GridContainer" parent="PanelContainer4/historyContainer"]
layout_mode = 2
columns = 10

[node name="Advice" type="RichTextLabel" parent="PanelContainer4/historyContainer"]
visible = false
z_index = 10
custom_minimum_size = Vector2(640, 360)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_nm8ib")
scroll_following = true
autowrap_mode = 1

[node name="close_advice_buttton" type="TextureButton" parent="PanelContainer4/historyContainer/Advice"]
z_index = 11
y_sort_enabled = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 1.0
offset_right = -5.0
offset_bottom = 41.0
grow_horizontal = 0
texture_normal = ExtResource("9_v4pow")
stretch_mode = 0

[node name="history_close" type="TextureButton" parent="PanelContainer4"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("9_v4pow")
stretch_mode = 5

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/HFlowContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="gui_input" from="history" to="." method="_on_history_gui_input"]
[connection signal="mouse_entered" from="history" to="." method="_on_history_mouse_entered"]
[connection signal="mouse_exited" from="history" to="." method="_on_history_mouse_exited"]
[connection signal="pressed" from="PanelContainer4/historyContainer/Advice/close_advice_buttton" to="PanelContainer4/historyContainer" method="_on_close_advice_buttton_pressed"]
[connection signal="pressed" from="PanelContainer4/history_close" to="." method="_on_history_close_pressed"]
